added outlets to Main.storyboard added Reusable Files 	added HeaderReusableFile 	added RepoCollectionViewCell: implemented method for outlet Setup edited ApiConf: added style edited ViewController name/path: changed class name to RepoCollectionViewController

--- a/RepoViewer/Base.lproj/Main.storyboard
+++ b/RepoViewer/Base.lproj/Main.storyboard
@@ -1,26 +1,115 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1611" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="7RZ-7F-N0h">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Repo Collection View Controller-->
+        <scene sceneID="gCh-7X-reL">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <collectionViewController id="7RZ-7F-N0h" customClass="RepoCollectionViewController" customModule="RepoViewer" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" id="J7F-mb-zyd">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="N3u-ZO-jD2">
+                            <size key="itemSize" width="150" height="150"/>
+                            <size key="headerReferenceSize" width="50" height="50"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Repository Cell" id="GV6-hc-1Bg" customClass="RepoCollectionViewCell" customModule="RepoViewer" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="50" width="150" height="150"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RepoName" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uJJ-qD-qzu">
+                                            <rect key="frame" x="8" y="8" width="134" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="by: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9J1-H5-7Qt">
+                                            <rect key="frame" x="8" y="41" width="28" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="size:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cVe-d7-oIk">
+                                            <rect key="frame" x="8" y="70" width="35" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="edt:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fth-zg-ZyW">
+                                            <rect key="frame" x="112" y="99" width="30" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </view>
+                                <constraints>
+                                    <constraint firstItem="cVe-d7-oIk" firstAttribute="top" secondItem="9J1-H5-7Qt" secondAttribute="bottom" constant="8" id="2pg-Z0-Dic"/>
+                                    <constraint firstAttribute="topMargin" secondItem="uJJ-qD-qzu" secondAttribute="top" id="6h2-nz-EOO"/>
+                                    <constraint firstAttribute="leadingMargin" secondItem="9J1-H5-7Qt" secondAttribute="leading" id="9DR-ne-xRr"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="Fth-zg-ZyW" secondAttribute="trailing" id="MF6-tz-KAp"/>
+                                    <constraint firstAttribute="leadingMargin" secondItem="cVe-d7-oIk" secondAttribute="leading" id="Obg-v0-429"/>
+                                    <constraint firstItem="9J1-H5-7Qt" firstAttribute="top" secondItem="uJJ-qD-qzu" secondAttribute="bottom" constant="12" id="TRX-Zb-3Zs"/>
+                                    <constraint firstAttribute="leadingMargin" secondItem="uJJ-qD-qzu" secondAttribute="leading" id="ZF7-9W-MCx"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="uJJ-qD-qzu" secondAttribute="trailing" id="dVm-cT-MzV"/>
+                                    <constraint firstItem="Fth-zg-ZyW" firstAttribute="top" secondItem="cVe-d7-oIk" secondAttribute="bottom" constant="8" symbolic="YES" id="vjB-4h-qR9"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="labelEstimatedTime" destination="Fth-zg-ZyW" id="59b-0x-unr"/>
+                                    <outlet property="labelName" destination="uJJ-qD-qzu" id="G0x-S7-vlY"/>
+                                    <outlet property="labelOwnerName" destination="9J1-H5-7Qt" id="CcJ-iX-rzm"/>
+                                    <outlet property="labelSize" destination="cVe-d7-oIk" id="Fgi-bj-qpZ"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Header ReusableView" id="avH-Ft-0IV" customClass="HeaderCollectionReusableView" customModule="RepoViewer" customModuleProvider="target">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                            <subviews>
+                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="searchTerm" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4UK-Un-oYY">
+                                    <rect key="frame" x="24" y="16" width="327" height="30"/>
+                                    <nil key="textColor"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                    <connections>
+                                        <outlet property="delegate" destination="7RZ-7F-N0h" id="IOY-Bh-5w5"/>
+                                    </connections>
+                                </textField>
+                            </subviews>
+                            <constraints>
+                                <constraint firstItem="4UK-Un-oYY" firstAttribute="leading" secondItem="avH-Ft-0IV" secondAttribute="leadingMargin" constant="16" id="Ls2-0r-GiK"/>
+                                <constraint firstItem="4UK-Un-oYY" firstAttribute="top" secondItem="avH-Ft-0IV" secondAttribute="topMargin" constant="8" id="WKT-Hx-v8f"/>
+                                <constraint firstAttribute="trailingMargin" secondItem="4UK-Un-oYY" secondAttribute="trailing" constant="16" id="sQW-2B-dgF"/>
+                            </constraints>
+                            <connections>
+                                <outlet property="textField" destination="4UK-Un-oYY" id="wfy-8a-OlH"/>
+                            </connections>
+                        </collectionReusableView>
+                        <connections>
+                            <outlet property="dataSource" destination="7RZ-7F-N0h" id="wTe-jB-1wW"/>
+                            <outlet property="delegate" destination="7RZ-7F-N0h" id="Tpl-Ws-q34"/>
+                            <outlet property="prefetchDataSource" destination="7RZ-7F-N0h" id="XR0-L9-3EN"/>
+                        </connections>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OOV-rv-1eI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-20" y="-50"/>
         </scene>
     </scenes>
 </document>
